<resources>
    <string name="app_name">NoUgly</string>
    <string name="name">Name</string>
    <string name="re_pw">RE-PW</string>
    <string name="pw">PW</string>
    <string name="phone_number">Phone Number</string>
    <string name="id">ID</string>
    <string name="sign_up">SIGN-UP</string>
    <string name="address">address</string>
    <string name="your_birthday">your birthday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">카테고리</string>
    <string name="crop">작물</string>
</resources>