<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpText"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="59dp"
        android:text="@string/re_pw"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/repwEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="81dp"
        android:text="@string/pw"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/pwEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="11dp"
        android:text="@string/phone_number"
        app:layout_constraintEnd_toStartOf="@+id/phoneEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="62dp"
        android:text="@string/name"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/nameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/idEditText"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/SignUpText"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/repwEditText"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="RE-PW"
        android:inputType="textPersonName"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpText"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="90dp"
        android:text="ID"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/idEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="54dp"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="textPersonName"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/pwEditText"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="PW"
        android:inputType="textPersonName"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpText" />

    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="131dp"
        android:fontFamily="@font/andante"
        android:text="SIGN-UP"
        android:textColor="#000000"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/birthdayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="63dp"
        android:contentDescription="@string/app_name"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        app:srcCompat="@drawable/ic_baseline_date_range_24" />

    <TextView
        android:id="@+id/birthtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="208dp"
        android:text="BirthDay"
        app:layout_constraintEnd_toStartOf="@+id/birthdayButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        app:chipSpacingHorizontal="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/birthdayTextView"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/maleChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="56dp"
            android:text="male"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthdayButton" />

        <com.google.android.material.chip.Chip
            android:id="@+id/femaleChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:layout_marginEnd="27dp"
            android:text="female"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/maleChip"
            app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="33dp"
        android:text="Gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayTextView" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="Address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/birthdayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/your_birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthtView" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/SignUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>